--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -34,7 +34,7 @@
             app:enterAnim="@anim/enter_from_right" />
         <deepLink
             android:id="@+id/deepLink"
-            app:uri="http://www.chatapp.psandroidlabs.com/clientconnect/args={ip}:{port}" />
+            app:uri="www.chatapp.psandroidlabs.com/args={ip}:{port}" />
         <argument
             android:name="ip"
             app:argType="string"
