--- a/app/src/main/res/layout/chat_members_row.xml
+++ b/app/src/main/res/layout/chat_members_row.xml
@@ -10,20 +10,16 @@
     android:focusable="true"
     android:padding="5dp">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginHorizontal="5dp"
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/userAvatar"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_gravity="center"
-        app:cardCornerRadius="250dp">
-
-        <ImageView
-            android:id="@+id/userAvatar"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_goat" />
-    </androidx.cardview.widget.CardView>
+        android:src="@drawable/ic_goat"
+        android:padding="3dp"
+        app:strokeWidth="3dp"
+        app:strokeColor="@color/purple_app"
+        app:shapeAppearanceOverlay="@style/RoundedShape50"/>
 
     <TextView
         android:id="@+id/chatMembersUsername"
@@ -36,6 +32,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:layout_marginHorizontal="5dp"
         android:layout_gravity="center"
         android:gravity="end"
@@ -43,7 +40,7 @@
 
     <ImageView
         android:id="@+id/trophy"
-        android:visibility="invisible"
+        android:visibility="gone"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginHorizontal="5dp"
